src/styles.css
/* You can add global styles to this file, and also import other style files */

:root {
  --primary-color: #4cc2dd;
  --primary-color-medium: rgba(36, 113, 125, 0.85);
  --primary-color-dark: #174951;
  --primary-color-light: #4cc2dd30;
  --primary-color-lighter: #4cc2dd1a;
  --secondary-color: #ffffff;
  --text-color: #333333;
  --text-light: #666666;
  --accent-blue: #4cc2dd;
  --background-light: #f8f9fa;
}

body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: var(--text-color);
  line-height: 1.6;
}

.btn-primary {
  background: linear-gradient(
    135deg,
    var(--primary-color) 0%,
    var(--primary-color-medium) 100%
  );
  border: none;
  transition: all 0.3s ease;
}

.btn-primary:hover {
  background: linear-gradient(
    135deg,
    var(--primary-color-medium) 0%,
    var(--primary-color-dark) 100%
  );
  transform: translateY(-2px);
  box-shadow: 0 8px 20px rgba(76, 194, 221, 0.3);
}

.text-primary {
  color: var(--primary-color) !important;
}

